--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Shippori+Mincho+B1:wght@400;500;600;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+  *{
+    font-family: 'Shippori Mincho B1', serif;
+  }
+  .active{
+    color: rgb(19, 17, 17)
+  }
