--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Shippori+Mincho+B1:wght@400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Shippori+Mincho+B1:wght@400;500;600;700&display=swap");
+* {
+  font-family: "Shippori Mincho B1", serif;
+}
+.active {
+  color: rgb(19, 17, 17);
+}
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-  *{
-    font-family: 'Shippori Mincho B1', serif;
-  }
-  .active{
-    color: rgb(19, 17, 17)
-  }
